index.html was changed

--- a/index.html
+++ b/index.html
@@ -6,15 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-  <!-- <script src="js/test.js"></script> -->
-  <!-- <script src="js/ht.js"></script> -->
-  <!-- <script src="js/ht-2.js"></script> -->
-  <!-- <script src="js/ht-3.js"></script> -->
-  <!-- <script src="js/ht-4.js"></script> -->
-  <!-- <script src="js/ht-5.js"></script> -->
-  <!-- <script src="js/ht-6.js"></script> -->
-  <!-- <script src="js/ht-7.js"></script> -->
-  <!-- <script src="js/bespalova_ht3_1.js"></script> -->
-  <script src="js/bespalova_ht4_4 (1).js"></script>
+  <script src="js/home_task_4/bespalova_ht3_2.js"></script>
 </body>
 </html>
