--- a/ht12.html
+++ b/ht12.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
+      body {
+        font-size: 24px;
+      }
       .wrapper {
         display: flex;
         justify-content: space-between;
@@ -12,7 +15,7 @@
       .square {
         width: 200px;
         height: 200px;
-        background-color: goldenrod;
+        background-color: blue;
         margin-bottom: 10px;
         text-align: center;
         display: flex;
@@ -21,6 +24,21 @@
       }
       span {
         margin-right: 5px;
+      }
+      .blue {
+        background-color: blue;
+      }
+      .green {
+        background-color: green;
+      }
+      .yellow {
+        background-color: yellow;
+      }
+      .red {
+        color: red;
+      }
+      ul li:first-child {
+        margin-top: 20px;
       }
     </style>
   </head>
@@ -62,6 +80,16 @@
         </div>
       </div>
     </div>
+    <section class="list">
+      <ul>
+        Фильмы:
+        <li>"Побег из Шоушенка"</li>
+        <li>"Криминальное чтиво"</li>
+        <li>"Бойцовский клуб"</li>
+        <li>"Форрест Гамп"</li>
+        <li>"Жизнь прекрасна"</li>
+      </ul>
+    </section>
     <script src="js/home_task_12/bespalova_ht12_1.js"></script>
   </body>
 </html>
