--- a/ht12.html
+++ b/ht12.html
@@ -37,6 +37,9 @@
       .red {
         color: red;
       }
+      ul li {
+        cursor: pointer;
+      }
       ul li:first-child {
         margin-top: 20px;
       }
