--- a/ht15.html
+++ b/ht15.html
@@ -5,10 +5,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
 </head>
+<style>
+  .wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 250px;
+  }
+</style>
 
 <body>
+  <div class="wrapper">
+
+  </div>
   <script src="js/home_task_15/bespalova_ht15_1.js"></script>
 </body>
 
